# nous_mountain

./: .gitignore  CITATION.cff  README.md  ev_model.py  seccionA_B_C_D_E_v5_2.py
carla_mountain/: README.md
data/: README.md
digital_twin/: README.md  carla_acquisition.py  ev_model.py
federated_experiments/: README.md  pyproject.toml  requirements.txt
federated_experiments/configs/: default.yaml  extended.yaml
federated_experiments/scripts/: run_all.sh  run_all_windows.bat  run_all_windows.ps1  run_all_windows_skip_flower.bat  run_all_windows_skip_flower.ps1  run_extended.sh  run_extended_no_flower.sh  run_extended_quick_windows.bat  run_extended_quick_windows.ps1  run_extended_windows.bat  run_extended_windows.ps1  run_extended_windows_no_flower.bat  run_extended_windows_no_flower.ps1  run_quick_sample.sh  run_quick_sample_windows.bat  run_quick_sample_windows.ps1
federated_experiments/src/mountain_pass_fl/: data.py  flower_exp.py  learning_curve.py  make_report.py  plotting.py  run_all.py  run_extended.py
grid_runs/: datos_grid_S01_Tesla_SOC90_dry_24C.csv
preprocess/: README.md
